# ironAPE

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
APE_Example/: MaterialsScience_taxonomy.owl  bulkmodulus_taxonomy.owl  tool_annotations.json
APE_Example/biotools/: config.json
APE_Example/bulk_modulus/: config.json  constraints.json  constraints.txt
APE_Example/bulk_modulus/solution/: solutions.txt
APE_Example/bulk_modulus/solution/CWL/: candidate_workflow_1.cwl
APE_Example/bulk_modulus/solution/Executables/: candidate_workflow_1.sh  candidate_workflow_2.sh  candidate_workflow_3.sh
APE_Example/defect_concentration/: config.json  constraints.json
APE_Example/defect_concentration/solution/: solutions.txt
APE_Example/defect_concentration/solution/CWL/: candidate_workflow_1.cwl  candidate_workflow_2.cwl  (+3 more)
APE_Example/lammps_potential/: config.json  constraints.json
APE_Example/lammps_potential/solution/: solutions.txt
APE_Example/vacancy_formation_energy/: config.json  constraints.json
APE_Example/vacancy_formation_energy/solution/: solutions.txt
examples/: example_function_ontology.ttl
ironape/: __init__.py  converter.py  run.py
pyironWorkflows/: DefectExample.ipynb  DefectWorkflow.ipynb
semantikon/: config.py  converter.py  run.py
semantikon/example/: config.json  constraints.json  example_function_ontology.ttl  generate_example.py  taxonomy.owl  taxonomy_changedPrefixes.owl  tool_annotations.json  tool_annotations_noPrefixes.json
semantikon/example/solution/: solutions.txt
tests/: test_converter.py
(+20 files in other folders)
