[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ironAPE"
version = "0.1.0"
description = "Semantic workflow planning via APE and pyiron ontologies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "rdflib",
    "pydantic>=2",
    "semantikon",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ironape*"]
